feat: Integrate DodoPayments for credit purchases
Adds the `dodopayments-checkout` library to handle payment processing for purchasing credits.
Introduces a new `PurchaseCreditsModal` component and associated logic within `App.tsx` to manage the credit purchasing flow.
Updates `package.json` and `index.html` to include the new dependency and its CDN link.
Minor fixes in icon component viewBox attributes.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@google/genai": "^1.10.0"
+    "@google/genai": "^1.10.0",
+    "dodopayments-checkout": "^1.0.0"
   }
 }
