--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@google/genai": "^1.10.0",
-    "dodopayments-checkout": "^1.0.0"
+    "dodopayments": "^0.3.0",
+    "standardwebhooks": "^1.0.1"
   }
 }
