--- a/package.json
+++ b/package.json
@@ -1,32 +1,1 @@
-{
-  "name": "virtual-try-on",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/genai": "^1.10.0",
-    "@supabase/supabase-js": "^2.44.4",
-    "@tsparticles/engine": "^3.5.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.5.0",
-    "clsx": "^2.1.1",
-    "dodopayments": "^2.4.2",
-    "framer-motion": "^11.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-image-crop": "^11.0.6",
-    "standardwebhooks": "^1.0.0",
-    "tailwind-merge": "^2.4.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3"
-  }
-}
+full contents of package.json
